--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,4 +1,6 @@
 dataset_yolo_v1
 dataset_yolo_v2
-garbage_classification
-garbage-dataset
+dataset_yolo_v3
+garbage_classification_v1
+garbage_classification_v2
+garbage_classification_v3
